syntax = "proto3";

option csharp_namespace = "Airline.Api.Grpc";

// Запрос на создание билета
message TicketRequest {
    int32 flight_id = 1;
    int32 passenger_id = 2;
    string seat_number = 3;
    bool has_hand_luggage = 4;
    double baggage_weight = 5;
}

// Ответ сервера при обработке билета
message TicketResponse {
    bool success = 1;
    string error = 2;
}

// gRPC сервис для приема билетов в потоковом режиме
service TicketReceiver {
    // Двусторонний streaming: клиент отправляет билеты, сервер отправляет ответы
    rpc StreamTickets (stream TicketRequest) returns (stream TicketResponse);
}
